<resources>
    <string name="app_name">MoodTracker</string>

    <string-array name="languages">
        <item>@string/hindi</item>
        <item>@string/english</item>
    </string-array>

    <string-array name="suggested_task_names">
        <item>@string/cycling</item>
        <item>@string/baseball</item>
        <item>@string/basketball</item>
        <item>@string/bath</item>
        <item>@string/books</item>
        <item>@string/puzzle</item>
        <item>@string/business</item>
        <item>@string/meeting</item>
        <item>@string/hockey</item>
        <item>@string/teaching</item>
        <item>@string/chess</item>
        <item>@string/nothing</item>
        <item>@string/coffee</item>
        <item>@string/cubes</item>
        <item>@string/pizza</item>
        <item>@string/tractor</item>
    </string-array>

    <string-array name="suggested_mood_names">
        <item>@string/confuse</item>
        <item>@string/tired</item>
        <item>@string/surprise</item>
        <item>@string/tear</item>
        <item>@string/silent</item>
        <item>@string/bad</item>
        <item>@string/jolly</item>
        <item>@string/romantic</item>
        <item>@string/naughty</item>
        <item>@string/okay</item>
    </string-array>

    <!-- Task Categories -->
    <string name="other">Other</string>
    <string name="entertainment">Entertainment</string>
    <string name="work">Work</string>
    <string name="health">Health</string>

    <!-- Mood Names -->
    <string name="happy">happy</string>
    <string name="sad">sad</string>
    <string name="meh">meh</string>
    <string name="confuse">confused</string>
    <string name="awful">awful</string>
    <string name="tired">tired</string>
    <string name="surprise">surprised</string>
    <string name="cool">cool</string>
    <string name="tear">tear</string>
    <string name="jolly">jolly</string>
    <string name="romantic">romantic</string>
    <string name="naughty">naughty</string>
    <string name="okay">okay</string>
    <string name="silent">silent</string>
    <string name="bad">bad</string>

    <!-- Task Names  -->
    <string name="movies">movies</string>
    <string name="family">family</string>
    <string name="friends">friends</string>
    <string name="food">food</string>
    <string name="drive">drive</string>
    <string name="shopping">shopping</string>
    <string name="cycling">cycling</string>
    <string name="gym">gym</string>
    <string name="yoga">yoga</string>
    <string name="books">books</string>
    <string name="code">code</string>
    <string name="bug">bug</string>
    <string name="gaming">gaming</string>
    <string name="cookies">cookies</string>
    <string name="pray">pray</string>
    <string name="party">party</string>
    <string name="football">football</string>
    <string name="cricket">cricket</string>
    <string name="sports">sports</string>
    <string name="baseball">baseball</string>
    <string name="basketball">basketball</string>
    <string name="bath">bath</string>
    <string name="puzzle">puzzle</string>
    <string name="business">business</string>
    <string name="meeting">meeting</string>
    <string name="hockey">hockey</string>
    <string name="teaching">teaching</string>
    <string name="chess">chess</string>
    <string name="nothing">nothing</string>
    <string name="coffee">coffee</string>
    <string name="cubes">cubes</string>
    <string name="pizza">pizza</string>
    <string name="tractor">tractor</string>

    <!-- Bottom navigation text -->
    <string name="text_entries">Entries</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_add_entry">Add Entry</string>
    <string name="text_stats">Stats</string>
    <string name="text_more">More</string>

    <!-- edit or add new mood icons -->
    <string name="header_add_mood_entry">Tell us about your mood</string>
    <string name="enter_mood_name">Enter mood name</string>
    <string name="text_add_new_mood">Add New Mood</string>
    <string name="error_empty_mood_icon">Please select any emoji</string>

    <!-- edit or add new task entry page -->
    <string name="header_add_task_entry">What have you been up to?</string>
    <string name="et_note_hint">Add Note</string>
    <string name="text_add_new_category">Add New Category</string>
    <string name="text_add_new_task">Add New Task</string>
    <string name="text_enter_category">Enter Category</string>


    <string name="text_save">Save</string>
    <string name="text_add">Add</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit_moods">Edit Moods</string>
    <string name="edt_hint_enter_your_name">Enter your name</string>
    <string name="text_change_language">Change Language</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_tasks">Edit Tasks</string>
    <string name="user_profile_image">User Profile Image</string>

</resources>
