<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_white"
    android:padding="@dimen/padding_screen">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtText"
            style="@style/defEdtStyle"
            android:layout_width="match_parent"
            android:hint="@string/text_enter_category" />

    </com.google.android.material.textfield.TextInputLayout>

    <lostankit7.droid.CustomButton
        android:id="@+id/btnOkay"
        style="@style/defButtonStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_add"
        app:layout_constraintEnd_toEndOf="@id/edtTextLayout"
        app:layout_constraintTop_toBottomOf="@id/edtTextLayout" />

    <lostankit7.droid.CustomButton
        android:id="@+id/btnCancel"
        style="@style/defButtonStyle"
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/text_cancel"
        app:layout_constraintBottom_toBottomOf="@id/btnOkay"
        app:layout_constraintEnd_toStartOf="@id/btnOkay"
        app:layout_constraintTop_toTopOf="@id/btnOkay" />
</androidx.constraintlayout.widget.ConstraintLayout>